# DnD-character-creator

./: .gitignore  CMakeLists.txt  README.md  ToDo.md  classes.json  creator.c  data.json
in progress/: Class creator.h
include/: Class creator.h  foutput.h
src/: Race cerator.c  class_creator.c  class_creator.h  main.c  utils.c  utils.h
